# axum-rest

./: .env  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: cake_filling.rs  fruit.rs  lib.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20231130_000001_create_cake_table.rs  m20231130_000002_create_filling_table.rs  m20231130_000003_create_fruit_table.rs  m20231130_000004_create_cake_filling_table.rs  m20231130_070544_add_primary_key_cake_filling_table.rs  m20231203_113212_create_user_table.rs
src/: error.rs  main.rs
src/config/: ctx.rs  database.rs  error.rs  init.rs  mod.rs
src/controller/: cake_controller.rs  error.rs  filling_controller.rs  login_controller.rs  mod.rs
src/middleware/: mod.rs
src/migration/: mod.rs
src/model/: cake.rs  cake_model.rs  error.rs  filling.rs  filling_model.rs  login_model.rs  mod.rs  prelude.rs
src/repository/: cake_repository.rs  filling_repository.rs  mod.rs
src/route/: cake_route.rs  error.rs  filling_route.rs  login_route.rs  mod.rs  route_static.rs
src/service/: cake_service.rs  filling_service.rs  mod.rs
src/utils/: api_error.rs  api_response.rs  b64.rs  envs.rs  mod.rs  time.rs
web-folder/: index.html
