[package]
name = "rust-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.7", features = [
    "debug-print",
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
axum = "0.7.1"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
base64 = "0.21.5"
time = { version = "0.3.30", features = ["formatting", "parsing", "serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.193", features = ["derive"] }
