[package]
name = "rust-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
# Lib
migration = { path = "migration" }

# -- Data
sea-orm = { version = "0.12.7", features = [
    "debug-print",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
sea-orm-migration = "0.12.6"

# -- Web
axum = "0.7.1"
tower-http = { version = "0.5.0", features = ["fs"] }
tower-cookies = "0.10"

# -- Async
tokio = { version = "1.34.0", features = ["full"] }

# -- Json
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# -- Others
base64 = "0.21.5"
time = { version = "0.3.30", features = ["formatting", "parsing", "serde"] }
dotenvy = "0.15.7"
derive_more = "0.99.17"
